@@ -3,4 +3,5 @@ complete %me \
 %foreach %command_options
 	'n/$_->{name}/($_->{opts})/' \\
 %end
-	'n/help/(%commands)/'
+	'n/help/(%commands)/' \
+	'n/info/(%info_keys)/'
